--- a/CoffeeCompass/resources/layouts/layout.xml
+++ b/CoffeeCompass/resources/layouts/layout.xml
@@ -1,4 +1,9 @@
 <layout id="MainLayout">
-    <label x="center" y="5" text="@Strings.prompt" color="Gfx.COLOR_WHITE" justification="Gfx.TEXT_JUSTIFY_CENTER" />
-    <bitmap id="id_monkey" x="center" y="30" filename="../drawables/monkey.png" />
+    <label x="center" y="5" text="@Strings.prompt" color="Gfx.COLOR_WHITE" justification="Gfx.TEXT_JUSTIFY_CENTER" font="Gfx.FONT_MEDIUM" />
+    <bitmap id="CoffeeIcon" x="center" y="30" filename="../drawables/coffee.png" />
+        <button x="115" y="center" width="50" height="50">
+        <param name="background">Gfx.COLOR_BLACK</param>
+        <param name="behavior">onMenu</param>
+    </button>
+
 </layout>
